Solve css display problem on ios safari 16.4+

--- a/src/style.less
+++ b/src/style.less
@@ -16,7 +16,8 @@
     padding: 0 20px;
 
     font-size: 1.2em;
-    -webkit-mask-box-image: linear-gradient(to top, transparent, transparent 5%, white 20%, white 80%, transparent 95%, transparent);
+    background-color: rgba(0, 0, 0, 0);
+    -webkit-mask-box-image-source: linear-gradient(to top, transparent, transparent 5%, white 20%, white 80%, transparent 95%, transparent);
   }
 
   .picker-column {
